fixed width of page on smaller mobile devices

--- a/src/components/AppHeader/header.css
+++ b/src/components/AppHeader/header.css
@@ -3,7 +3,7 @@
 position:fixed;
 top:0;
 flex-direction: row-reverse;
-width: 100%;
+width: 100vw;
 padding-right: 10%;
 z-index: 999;
 
